# familiar-schemas

./: .gitignore  Cargo.toml  README.md  audit_refs.sh  detect_broken_refs.sh  familiar_schemas_code_filtered.md  fix_refs.sh  fix_typed_ids.py  generate_code_markdown.rs  generate_filtered_markdown.rs  generate_svg.sh  schemas.dot  schemas.toml  schemas_complete.dot  schemas_filtered.dot
artifacts/: kinds_index.json  schema_index.json
config/: defaults.toml
nickel/infrastructure/resources/: _directory.ncl
scripts/: compose_entities.py  generate-typescript.sh  generate.sh
src/: checksum.rs  compatibility.rs  config.rs  error.rs  lib.rs  registry.rs  schema.rs  version.rs
src/codegen/: config.rs  mod.rs  names.rs  rust.rs
src/graph/: analysis.rs  classify.rs  loader.rs  mod.rs  patterns.rs
tests/: golden_tests.rs
tests/fixtures/: alias_b.json  alias_c.json  alias_of_alias.json  allOf_composition.json  array_constraints.json  conditional_schema.json  dependent_validation.json  message_event.json  mutual_a.json  mutual_b.json  oneof_enum.json  oneof_mixed.json  oneof_tagged.json  pattern_properties.json  primitive_match.json  self_recursive.json  simple_struct.json  string_enum.json  user_event.json
versions/nickle_backup_partial/nickel/api/: _directory.ncl
versions/nickle_backup_partial/nickel/architecture/: _directory.ncl
versions/nickle_backup_partial/nickel/components/: _directory.ncl
versions/nickle_backup_partial/nickel/database/: _directory.ncl
versions/nickle_backup_partial/nickel/domains/: _directory.ncl
versions/nickle_backup_partial/nickel/primitives/: _directory.ncl
versions/nickle_backup_partial/nickel/types/: _directory.ncl
versions/nickle_backup_partial/nickel/ui/: _directory.ncl
versions/v0.1.0/: checksums.sha256  manifest.json
versions/v0.1.0/rust/types/: AgentMessageType.json  AgentSpeaker.json  AgentState.json  AgenticEvent.json  ClassifierOutput.json  ConversationTurn.json  Finding.json  LogLevel.json  OrchestrationInput.json  OrchestrationOutput.json  PhysicsHint.json  PhysicsOutput.json  PhysicsState.json  RAGOutput.json  ToolCallRequest.json  ToolCallResult.json  VAEPosition.json
versions/v0.2.0/: checksums.sha256  manifest.json
versions/v0.2.0/avro/avro/: CommandEnvelope.avsc
versions/v0.2.0/json-schema/agentic/: ClassificationResult.schema.json  ConciergeInput.schema.json  (+3 more)
versions/v0.3.0/: checksums.sha256  manifest.json
versions/v0.4.0/: checksums.sha256  manifest.json
versions/v0.5.0/json-schema/: manifest.json
versions/v0.6.0/: manifest.json
versions/v0.7.0/: checksums.sha256  manifest.json
versions/v1.1.0-alpha/: platform.json
versions/v1.1.0-alpha/json-schema/: fix_json.py
versions/v1.1.0-alpha/nickel/: global.ncl  validation.ncl
xtask/: Cargo.toml
xtask/src/: main.rs
(+2382 files in other folders)
