[package]
name = "familiar-schemas"
version = "0.1.0"
edition = "2021"
description = "Versioned, append-only schema registry for the Familiar platform"
authors = ["Eric Theiss"]
license = "MIT"
repository = "https://github.com/familiar/familiar-schemas"

[dependencies]
# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Versioning
semver = { version = "1.0", features = ["serde"] }

# Checksums for immutability
sha2 = "0.10"

# Date/time
chrono = { version = "0.4", features = ["serde"] }

# AVRO support (legacy, being phased out)
apache-avro = "0.16"

# JSON Schema validation
jsonschema = "0.17"

# Multi-format schema diffing (JSON Schema, Protobuf, Avro, OpenAPI)
rusty-schema-diff = "0.1"

# Text diffing for compatibility checking
similar = "2.3"

# Error handling
thiserror = "1.0"

# CLI
clap = { version = "4.0", features = ["derive"] }

# Git operations
git2 = "0.18"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# File walking
walkdir = "2.4"
ignore = "0.4"

# Regex
regex = "1.10"

# Configuration
config_crate = { package = "config", version = "0.14", features = ["toml"] }
toml = "0.8"
directories = "5.0"

# General utilities
anyhow = "1.0"

[dev-dependencies]
tempfile = "3.8"

[[bin]]
name = "schema-registry"
path = "src/bin/registry.rs"

[[bin]]
name = "schema-validator"
path = "src/bin/validator.rs"

[[bin]]
name = "schema-export"
path = "src/bin/export.rs"

[[bin]]
name = "schema-config"
path = "src/bin/config.rs"
